--- a/style.css
+++ b/style.css
@@ -1,5 +1,54 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.nav-title {
+  color: #181818;
+  font-family: Open Sans;
+  font-size: 4.5rem;
+  font-weight: 800;
+}
+
+.nav-title > span {
+  color: #fd6e0a;
+}
+
+nav > ul {
+  display: flex;
+  align-items: center;
+}
+
+nav li {
+  margin-right: 50px;
+  list-style: none;
+}
+
+nav a {
+  text-decoration: none;
+  color: var(--dark-02, #474747);
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.btn-hire {
+  padding: 18px 35px;
+  width: 150px;
+  height: 64px; 
+  border-radius: 5px;
+  background: #fd6e0a;
+  border: none;
+  color: white;
+  font-size: 2rem;
+  font-weight: 700;
 }
