--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ body {
 
 .header-section {
   background-color: #fff8f3;
+  background-image: url(./images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-
 nav {
   display: flex;
   justify-content: space-around;
@@ -46,8 +48,7 @@ nav a {
 }
 
 .btn-hire,
-.btn-download,
-.btn-contact {
+.btn-download {
   padding: 18px 35px;
   border-radius: 5px;
   background: #fd6e0a;
@@ -56,16 +57,96 @@ nav a {
   font-size: 2rem;
   font-weight: 700;
 }
+.btn-contact {
+  padding: 18px 35px;
+  border-radius: 5px;
+  background-color: #fff8f3;
+  color: #fd6e0a;
+  border: 2px solid #fd6e0a;
+
+  font-size: 2rem;
+  font-weight: 700;
+}
 
 .banner-section {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 30px 30px 30px 150px;
+  padding: 30px 30px 0px 150px;
 }
 
+.banner-greeting {
+  color: #474747;
+  font-size: 4.5rem;
+  font-weight: 600;
+  margin: 0px 0px;
+}
+.banner-title {
+  color: #181818;
+  font-size: 8.5rem;
+  font-weight: 800;
+  margin: 20px 0px;
+}
+.banner-description {
+  color: #757575;
+  font-size: 1.8rem;
+  line-height: 3rem;
+}
 .hardy-pic {
   width: 500px;
+}
 
-  flex-shrink: 0;
+main{
+  max-width: 1050px;
+  margin: 0 auto;
+}
+main section{
+  margin-right: 130px;
+}
+
+.about-section {
+  margin: 13rem auto;
+  background-color: #fff8f3;
+  padding: 130px;
+  border-radius: 10px;
+  mask-image: 130px 0;
+}
+
+.about-title {
+  text-align: center;
+  color: #181818);
+  font-family: Open Sans;
+  font-size: 3.5rem;
+  font-weight: 700;
+}
+
+.about-description {
+  color: #757575;
+text-align: center;
+font-family: Open Sans;
+font-size: 1.8rem;
+line-height: 3rem;
+}
+
+.about-info{
+  display: flex;
+  justify-content: space-around;
+}
+
+.info-title{
+  color: #757575;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 200;
+  line-height: 3rem;
+  margin: 0;
+}
+.info-description{
+    color: #757575;
+  text-align: center;
+  font-size: 2rem;
+  line-height: 3rem;
+  font-weight: 700;
+  margin: 0;
+
 }
