--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ body {
 
 .header-section {
   background-color: #fff8f3;
-  background-image: url(./images/header_bg.png);
+  background-image: url(./images/header_bg.png), url(./images/developer.png);
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: bottom right, top left;
 }
 
 nav {
@@ -43,13 +43,14 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: var(--dark-02, #474747);
+  color: #474747;
   font-size: 2rem;
   font-weight: 400;
 }
 
 .btn-hire,
-.btn-download {
+.btn-download,
+.submit-button {
   padding: 18px 35px;
   border-radius: 5px;
   background: #fd6e0a;
@@ -111,7 +112,9 @@ main {
 
 .about-title,
 .skill-title,
-.resume-title {
+.resume-title,
+.connect-title,
+.massage-title {
   text-align: center;
   color: #181818;
   font-family: Open Sans;
@@ -212,4 +215,41 @@ hr {
 
 .download-btn-2 {
   text-align: center;
+}
+
+footer {
+  display: flex;
+  background-color: #fff8f3;
+  justify-content: space-around;
+  margin-top: 100px;
+  padding: 90px;
+}
+.connect-description {
+  color: #474747;
+  font-size: 16px;
+  line-height: 28px;
+  margin: 25px 0;
+}
+.footer-connect,
+.footer-massage {
+  width: 50%;
+}
+.connect-title,
+.massage-title {
+  margin-bottom: 20px;
+  text-align: left;
+}
+.footer-connect a {
+  margin-right: 24px;
+}
+
+form > input,
+textarea {
+  display: block;
+  margin: 25px 0px;
+  border: none;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 18px 30px;
+  width: 60%;
 }
